# rofi-picker

./: .gitignore  desktop-item.nix  filelist.sh  flake.nix  rofi-launcher.nix  wrapper.nix
rofipicker/: Main.hs  default.nix  rofipicker.cabal
